set(dict_path "${CMAKE_CURRENT_SOURCE_DIR}/")
configure_file(cfg.h.in ${CMAKE_CURRENT_SOURCE_DIR}/analysis/include/AnalysisG/cfg.h)
configure_file(cfg.h.in ${CMAKE_CURRENT_SOURCE_DIR}/io/include/io/cfg.h)

add_subdirectory(typecasting)
add_subdirectory(notification)
add_subdirectory(structs)
add_subdirectory(tools)
add_subdirectory(particle)
add_subdirectory(event)
add_subdirectory(selection)
add_subdirectory(graph)
add_subdirectory(model)
add_subdirectory(metrics)
add_subdirectory(meta)
add_subdirectory(io)
add_subdirectory(plotting)
add_subdirectory(lossfx)

add_subdirectory(container)
add_subdirectory(sampletracer)
add_subdirectory(analysis)
add_subdirectory(dataloader)
add_subdirectory(optimizer)
