cmake_minimum_required(VERSION 3.23 FATAL_ERROR)
project(${SKBUILD_PROJECT_NAME} VERSION ${SKBUILD_PROJECT_VERSION} LANGUAGES CXX C)
include(CheckLanguage)
check_language(CUDA)

if (CMAKE_CUDA_COMPILER)
enable_language(CUDA)
set(CMAKE_CUDA_STANDARD 11)
set(CMAKE_CUDA_STANDARD_REQUIRED ON)
message(STATUS "INSTALLING EXTENSIONS WITH CUDA!")
string(REGEX REPLACE ".[0-9][0-9]|\\." "" CUDA_V ${CMAKE_CUDA_COMPILER_VERSION})
message(STATUS "CMAKE_CUDA_COMPILER = ${CMAKE_CUDA_COMPILER}")
message(STATUS "CMAKE_CUDA_COMPILER_ID = ${CMAKE_CUDA_COMPILER_ID}")
message(STATUS "CMAKE_CUDA_COMPILER_VERSION = ${CUDA_V}")
endif()

if (DEFINED ENV{ATLAS_LOCAL_ROOT_BASE})
    message("Setup up ATLAS with 'lsetup hdf5 1.8.17-sl7'!")
endif()

if (DEFINED ENV{ALRB_HDF5_PATH})
    set(ENV{PATH} $ENV{ALRB_HDF5_PATH}:$ENV{PATH})
endif()

find_package(pybind11 REQUIRED)
find_package(HDF5 REQUIRED COMPONENTS C CXX)
find_package(Torch REQUIRED)
set(HDF5_USE_CXX TRUE)

add_subdirectory(structs)
add_subdirectory(tools)
add_subdirectory(io)
